--- a/modal.css
+++ b/modal.css
@@ -11,7 +11,6 @@
 /* Landing Page */
 
 body {
-  margin: 0;
   display: flex;
   flex-direction: column;
   background-image: url("background.png");
@@ -405,22 +404,23 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
+  position: relative;
   min-height: 93vh;
   border-radius: 10px;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
+  display: flex;
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
   margin-bottom: 10px;
 }
 .hero-content {
   padding: 51px 67px;
-  grid-column: span 4;
+  width: 30%;
+  /*grid-column: span 4;*/
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  min-width: 290px; /*au lieu de 424*/
 }
 .hero-content::after {
   content: "";
@@ -438,10 +438,10 @@ input[data-error]::after {
 .hero-headline {
   font-size: 6rem;
   font-weight: normal;
-  white-space: nowrap;
+  width: 80vw;
 }
 .hero-text {
-  width: 146%;
+  /*width: 40%;*/
   font-weight: normal;
   margin-top: 57px;
   padding: 0;
@@ -455,9 +455,10 @@ input[data-error]::after {
   margin-top: 59px;
 }
 .hero-img {
-  grid-column: span 8;
+  width: 100%;
 }
 .hero-img img {
+  object-fit: cover;
   width: 100%;
   height: 100%;
   display: block;
@@ -480,7 +481,8 @@ footer {
 }
 @media screen and (max-width: 800px) {
   .hero-section {
-    display: block;
+    display: flex;
+    flex-direction: column;
     box-shadow: unset;
   }
   .hero-content {
@@ -495,12 +497,13 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
+    font-size: 2.5rem;
+    font-weight: 500;
     white-space: normal;
   }
   .hero-text {
-    width: unset;
-    font-size: 1.5rem;
+    width: 80vw;
+    font-size: 0.813rem;
   }
   .hero-img img {
     border-radius: 10px;
