--- a/modal.css
+++ b/modal.css
@@ -119,7 +119,7 @@ main {
   background: #fe142f;
   display: flex;
   margin: auto;
-  padding: 2em;
+  /*padding: 2em;*/
   color: #fff;
   padding: 0.75rem 2.5rem;
   border-radius: 1rem;
@@ -207,7 +207,14 @@ input {
   font-size: 20px;
   height: 48px;
 }
-.formData[data-error]::after {
+
+.form-alert {
+  font-size: 0.6em;
+  color: #e54858;
+  border: 2px solid #e54858;
+}
+/*
+.form-data[data-error]::after {
   content: attr(data-error);
   font-size: 0.4em;
   color: #e54858;
@@ -219,13 +226,12 @@ input {
   opacity: 0;
   transition: 0.3s;
 }
-.formData[data-error-visible="true"]::after {
+.form-data[data-error-visible="true"]::after {
   opacity: 1;
 }
-.formData[data-error-visible="true"] .text-control {
+.form-data[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
 input[data-error]::after {
     content: attr(data-error);
     font-size: 0.4em;
