Add function to check date, checkbox and radio btn

--- a/modal.css
+++ b/modal.css
@@ -110,8 +110,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -211,31 +209,9 @@ input {
 .form-alert {
   font-size: 0.6em;
   color: #e54858;
+  white-space: nowrap;
 }
-/*
-.form-data[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.4em;
-  color: #e54858;
-  display: block;
-  margin-top: 7px;
-  margin-bottom: 7px;
-  text-align: right;
-  line-height: 0.3;
-  opacity: 0;
-  transition: 0.3s;
-}
-.form-data[data-error-visible="true"]::after {
-  opacity: 1;
-}
-.form-data[data-error-visible="true"] .text-control {
-  border: 2px solid #e54858;
-}
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
