--- a/modal.css
+++ b/modal.css
@@ -93,8 +93,6 @@ p {
   }
 }
 
-
-
  @media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
@@ -121,7 +119,6 @@ main {
   background: #fe142f;
   display: flex;
   margin: auto;
-  /*padding: 2em;*/
   color: #fff;
   padding: 0.75rem 2.5rem;
   border-radius: 1rem;
@@ -306,7 +303,8 @@ input {
   transform: rotate(-45deg);
 }
 .btn-submit,
-.btn-signup {
+.btn-signup,
+.confirm-modal-btn {
   background: #fe142f;
   display: block;
   margin: 0 auto;
@@ -317,73 +315,28 @@ input {
   cursor: pointer;
   border: 0;
 }
-/* custom select styles */
-.custom-select {
-  position: relative;
-  font-family: Arial;
-  font-size: 1.1rem;
-  font-weight: normal;
+
+/* Confirm Modal */
+
+.confirm-modal {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 650px;
+}
+.confirm-modal-txt {
+  height: 80%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  font-size: 2.25rem;
+  text-align: center;
+  font-weight: 400;
 }
 
-.custom-select select {
-  display: none;
-}
-.select-selected {
-  background-color: #fff;
-}
 
-/* Style the arrow inside the select element: */
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 10px;
-  right: 13px;
-  width: 11px;
-  height: 11px;
-  border: 3px solid transparent;
-  border-bottom-color: #f00;
-  border-left-color: #f00;
-  transform: rotate(-48deg);
-  border-radius: 5px 0 5px 0;
-}
-
-/* Point the arrow upwards when the select box is open (active): */
-.select-selected.select-arrow-active:after {
-  transform: rotate(135deg);
-  top: 13px;
-}
-
-.select-items div,
-.select-selected {
-  color: #000;
-  padding: 11px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  border-radius: 8px;
-  height: 48px;
-}
-
-/* Style items (options): */
-.select-items {
-  position: absolute;
-  background-color: #fff;
-  top: 89%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-/* Hide the items when the select box is closed: */
-.select-hide {
-  display: none;
-}
-
-.select-items div:hover,
-.same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-/* custom select end */
 .text-label {
   font-weight: normal;
   font-size: 16px;
@@ -459,11 +412,14 @@ input {
 .hero-section > .btn-signup {
   display: none;
 }
+
 footer {
   padding-left: 2vw;
   padding-right: 2vw;
   margin: 0 20px;
 }
+
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: flex;
@@ -505,26 +461,7 @@ footer {
   }
 }
 
-.thanks-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.thanks-container-text {
-  height: 80%;
-  flex: 1;
-  display: flex;
-  align-items: center;
-  font-size: 2.25rem;
-  text-align: center;
-  font-weight: 400;
-}
-.thanks-container-btn {
-  height: auto;
 
-}
 
 @keyframes modalopen {
   from {
