--- a/modal.css
+++ b/modal.css
@@ -11,13 +11,10 @@
 }
 
 /* Landing Page */
-
 body {
   display: flex;
   flex-direction: column;
-  /*background-image: url("background.png");*/
   font-family: var(--font-default);
-  font-size: 18px;
   max-width: 1300px;
   margin: 0 auto;
 }
@@ -27,10 +24,12 @@ p {
   padding: 0.5vw;
 }
 
+/* Navigation Menu */
 .topnav {
   overflow: hidden;
   margin: 3.5%;
 }
+
 .header-logo {
   float: left;
 }
@@ -44,6 +43,7 @@ p {
 .main-navbar {
     float: right;
 }
+
 .topnav a {
   float: left;
   display: block;
@@ -56,57 +56,19 @@ p {
   font-family: Roboto, sans-serif;
 }
 
-.topnav a:hover {
-  background-color: #ff0000;
-  color: #ffffff;
-  border-radius: 15px;
-}
-
+.topnav a:hover,
 .topnav a.active {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
+  text-decoration: underline;
 }
 
 .topnav .icon {
   display: none;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-}
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-} 
-
 main {
-  font-size: 130%;
-  font-weight: bolder;
-  color: black;
   padding-top: 0.5vw;
   padding-left: 2vw;
   padding-right: 2vw;
@@ -137,7 +99,6 @@ main {
 }
 
 /* Modal form */
-
 .button {
   background: #fe142f;
   margin-top: 0.5em;
@@ -233,6 +194,7 @@ input {
   top: -1px;
   transition: 0.3s;
 }
+
 .checkbox-label .checkbox-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
@@ -249,21 +211,26 @@ input {
   transition: 0.3s;
   opacity: 0;
 }
+
 .checkbox-input {
   display: none;
 }
+
 .checkbox-input:checked + .checkbox-label .checkbox-icon::after,
 .checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
+
 .checkbox-input:checked + .checkbox2-label .checkbox-icon {
   background: #279e7a;
 }
+
 .checkbox2-label .checkbox-icon {
   border-radius: 4px;
   border: 0;
   background: #c4c4c4;
 }
+
 .checkbox2-label .checkbox-icon::after {
   width: 7px;
   height: 4px;
@@ -334,58 +301,54 @@ input {
   text-align: center;
   font-weight: 400;
 }
-
-
 .text-label {
   font-weight: normal;
   font-size: 16px;
 }
+.header-logo img {
+  width: 50%;
+}
+
 .hero-section {
   position: relative;
-  min-height: 93vh;
-  border-radius: 10px;
   display: flex;
   overflow: hidden;
+  height: fit-content;
+  min-height: 657px;
+  border-radius: 10px;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
 }
+
 .hero-content {
-  padding: 51px 67px;
-  width: 30%;
-  /*grid-column: span 4;*/
+  padding: 51px 56px;
+  width: 42%;
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 290px; /*au lieu de 424*/
 }
-.hero-content::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  background: #232323;
-  position: absolute;
-  right: -80px;
-  top: 0;
-}
+
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
+
 .hero-headline {
-  font-size: 6rem;
+  font-size: clamp(2.5rem, 6vw ,6rem);
+  white-space: nowrap;
   font-weight: normal;
   width: 80vw;
 }
 .hero-text {
-  /*width: 40%;*/
   font-weight: normal;
+  font-size: clamp(0.813rem, 2vw, 1.5rem);
   margin-top: 57px;
   padding: 0;
+  width: 23vw;
+  min-width: 220px;
 }
+
 .btn-signup {
-  outline: none;
-  text-transform: capitalize;
   font-size: 1.3rem;
   padding: 15px 23px;
   margin: 0;
@@ -413,13 +376,35 @@ input {
 }
 
 footer {
-  padding-left: 2vw;
   padding-right: 2vw;
   margin: 0 20px;
 }
 
-
-@media screen and (max-width: 800px) {
+ @media screen and (max-width: 540px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-top: -15px;
+  }
+} 
+@media screen and (max-width: 1000px) {
+  .topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
   .hero-section {
     display: flex;
     flex-direction: column;
@@ -437,13 +422,12 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 2.5rem;
-    font-weight: 500;
+    text-align: center;
     white-space: normal;
+    font-weight: 500;
   }
   .hero-text {
     width: 80vw;
-    font-size: 0.813rem;
   }
   .hero-img img {
     border-radius: 10px;
@@ -459,6 +443,8 @@ footer {
     text-align: center;
   }
 }
+
+/* Animation*/ 
 
 @keyframes modalopen {
   from {
