css text correction, second button modal opening

--- a/modal.css
+++ b/modal.css
@@ -44,7 +44,7 @@ p {
     float: right;
 }
 
-.topnav a {
+.main-link {
   float: left;
   display: block;
   color: #000000;
@@ -56,8 +56,8 @@ p {
   font-family: Roboto, sans-serif;
 }
 
-.topnav a:hover,
-.topnav a.active {
+.main-link:hover,
+.main-link.active {
   background-color: #ff0000;
   color: #ffffff;
   border-radius: 15px;
@@ -380,17 +380,10 @@ footer {
   margin: 0 20px;
 }
 
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-} 
 @media screen and (max-width: 1000px) {
   .topnav a {display: none;}
   .topnav a.icon {
+    color : red;
     float: right;
     display: block;
   }
@@ -405,6 +398,11 @@ footer {
     display: block;
     text-align: left;
   }
+  /*.main-navbar {
+    border: 1px black solid;
+    box-shadow: 0 2px 7px 2px inset rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+  }*/
   .hero-section {
     display: flex;
     flex-direction: column;
@@ -413,7 +411,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
+    padding: 0;
   }
   .hero-content::after {
     content: unset;
@@ -422,8 +420,6 @@ footer {
     display: none;
   }
   .hero-headline {
-    text-align: center;
-    white-space: normal;
     font-weight: 500;
   }
   .hero-text {
