--- a/modal.css
+++ b/modal.css
@@ -10,7 +10,7 @@
   padding: 0;
 }
 
-/* Landing Page */
+/* Global Parameters */
 body {
   display: flex;
   flex-direction: column;
@@ -24,10 +24,18 @@ p {
   padding: 0.5vw;
 }
 
-/* Navigation Menu */
+.hidden {
+  display : none;
+}
+
+/* Header Navigation Menu */
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+}
+
+.topnav .icon {
+  display: none;
 }
 
 .header-logo {
@@ -39,6 +47,8 @@ p {
   width: 100%;
   height: 100%;
 } 
+
+/* Main */
 
 .main-navbar {
     float: right;
@@ -64,18 +74,14 @@ p {
   text-decoration: underline;
 }
 
-.topnav .icon {
-  display: none;
-}
-
 main {
-  padding-top: 0.5vh;
-  padding-left: 2vw;
-  padding-right: 2vw;
+  padding: 0.5vh 2vw 0 2vw;
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
 }
+
+/* Button */ 
 
 .modal-btn {
   font-size: 145%;
@@ -88,21 +94,6 @@ main {
   cursor: pointer;
 }
 
-.modal-btn:hover {
-  background: #3876ac;
-}
-
-.footer {
-  margin: 20px;
-  padding: 10px;
-  font-family: var(--font-slab);
-}
-
-/* Modal form */
-.hidden {
-  display : none;
-}
-
 .button {
   background: #fe142f;
   margin-top: 0.5em;
@@ -113,12 +104,92 @@ main {
   font-size: 16px;
 }
 
-.button:hover {
+.btn-submit,
+.btn-signup,
+.confirm-modal-btn {
+  background: #fe142f;
+  display: block;
+  margin: 0 auto;
+  border-radius: 7px;
+  font-size: 1rem;
+  padding: 12px 82px;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+}
+
+.modal-btn:hover,
+.button:hover  {
   background: #3876ac;
 }
 
+.btn-signup {
+  font-size: 1.3rem;
+  padding: 15px 23px;
+  margin: 59px 0 0 0;
+}
+
+/* Landing main */
+
+.hero-section {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  height: fit-content;
+  min-height: 657px;
+  border-radius: 10px;
+  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+}
+
+.hero-content {
+  padding: 51px 56px;
+  width: 42%;
+  background: #232323;
+  color: #fff;
+  position: relative;
+  text-align: left;
+}
+
+.hero-content > * {
+  position: relative;
+  z-index: 1;
+}
+
+.hero-headline {
+  font-size: clamp(2.5rem, 6vw ,6rem);
+  white-space: nowrap;
+  font-weight: normal;
+  width: 80vw;
+}
+
+.hero-text {
+  font-weight: normal;
+  font-size: clamp(0.813rem, 2vw, 1.5rem);
+  margin-top: 57px;
+  padding: 0;
+  width: 23vw;
+  min-width: 220px;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-img img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: 0;
+}
+
+.hero-section > .btn-signup {
+  display: none;
+}
+
+/* Modal form */
+
 .bground {
-  /*display: none;*/
   position: fixed;
   z-index: 1;
   left: 0;
@@ -278,20 +349,6 @@ input {
   transform: rotate(-45deg);
 }
 
-.btn-submit,
-.btn-signup,
-.confirm-modal-btn {
-  background: #fe142f;
-  display: block;
-  margin: 0 auto;
-  border-radius: 7px;
-  font-size: 1rem;
-  padding: 12px 82px;
-  color: #fff;
-  cursor: pointer;
-  border: 0;
-}
-
 /* Confirm Modal */
 .confirm-modal {
   width: 100%;
@@ -317,63 +374,9 @@ input {
   font-size: 16px;
 }
 
-.hero-section {
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  height: fit-content;
-  min-height: 657px;
-  border-radius: 10px;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-}
-
-.hero-content {
-  padding: 51px 56px;
-  width: 42%;
-  background: #232323;
-  color: #fff;
-  position: relative;
-  text-align: left;
-}
-
-.hero-content > * {
-  position: relative;
-  z-index: 1;
-}
-
-.hero-headline {
-  font-size: clamp(2.5rem, 6vw ,6rem);
-  white-space: nowrap;
-  font-weight: normal;
-  width: 80vw;
-}
-
-.hero-text {
-  font-weight: normal;
-  font-size: clamp(0.813rem, 2vw, 1.5rem);
-  margin-top: 57px;
-  padding: 0;
-  width: 23vw;
-  min-width: 220px;
-}
-
-.btn-signup {
-  font-size: 1.3rem;
-  padding: 15px 23px;
-  margin: 0;
-  margin-top: 59px;
-}
-
-.hero-img {
-  width: 100%;
-}
-
-.hero-img img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  display: block;
-  padding: 0;
+/* Footer */
+footer {
+  margin: 0 20px;
 }
 
 .copyrights {
@@ -382,15 +385,6 @@ input {
   font-size: 1rem;
   margin: 60px 0 30px;
   font-weight: bolder;
-}
-
-.hero-section > .btn-signup {
-  display: none;
-}
-
-footer {
-  padding-right: 2vw;
-  margin: 0 20px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -462,7 +456,6 @@ footer {
     text-align: center;
   }
 }
-
 
 
 /* Animation*/ 
